deploy/qca-node-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: qca-node-ingress-2
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:942024430749:certificate/f212f210-e3c4-4474-aedd-4103e745b67e
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: qca-node
spec:
  rules:
    - host: qca-node.bilgener.ca
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: qca-node-np
              servicePort: 80
